k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecoshop-service
  namespace: ecoshop
spec:
  selector:
    app: ecoshop
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
