k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecoshop-ingress
  namespace: ecoshop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ecoshop.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ecoshop-service
            port:
              number: 80
